add this to my repository

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <input type="text" name="nom" placeholder="Nom du cours">
             </div>
             <div>
-                <label for="nom">Nom</label>
+                <label for="nom">Niveau</label>
                 <select name="level" id="level">
-                    <option value="1ere">7eme</option>
-                    <option value="2eme">8eme</option>
-                    <option value="2eme">1ere</option>
-                    <option value="2eme">2eme</option>
-                    <option value="2eme">3eme</option>
-                    <option value="2eme">4eme</option>
+                    <option value="7ème">7ème</option>
+                    <option value="8ème">8ème</option>
+                    <option value="1ère">1ère</option>
+                    <option value="2ème">2ème</option>
+                    <option value="3ème">3ème</option>
+                    <option value="4ème">4ème</option>
                 </select>
             </div>
             <div>
